Storage/minio/minio-dev.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: minio
  labels:
    name: minio
---
apiVersion: v1
kind: Pod
metadata:
  labels:
    app: minio
  name: minio
  namespace: minio # Change this value to match the namespace metadata.name
spec:
  containers:
  - name: minio
    image: quay.io/minio/minio:latest
    command:
    - /bin/bash
    - -c
    args: 
    - minio server /data --console-address :9090
    volumeMounts:
    - mountPath: /data
      name: localvolume # TODO 
  nodeSelector:
    kubernetes.io/hostname: minio #TODO
  volumes:
  - name: localvolume
    hostPath: # TODO 
      path: /mnt/disk1/data # TODO
      type: DirectoryOrCreate # TODO
