Storage/minio/minio-svc.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
   app: minio
  name: minio
  namespace: minio
spec:
   ports:
   - port: 9090
     protocol: TCP
     targetPort: 9090
     name: console
   - port: 9000
     protocol: TCP
     targetPort: 9000
     name: api
   selector:
     app: minio
